--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.63.0",
     "styled-components": "^6.1.19",
     "zod": "^4.1.11"
   },
