--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "styled-components": "^6.1.19",
+    "swr": "^2.3.6",
     "zod": "^4.1.11"
   },
   "devDependencies": {
