--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "next": "15.5.4",
     "react": "19.1.0",
+    "react-content-loader": "^7.1.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "styled-components": "^6.1.19",
@@ -33,6 +34,7 @@
     "@storybook/nextjs-vite": "^9.1.9",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-content-loader": "^3.1.4",
     "@types/react-dom": "^19",
     "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
