--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.3",
+    "@mui/material": "^7.3.3",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-content-loader": "^7.1.1",
