--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint --cache --cache-location .eslintcache --ext .js,.jsx,.ts,.tsx .",
     "lint:fix": "npm run lint -- --fix",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -36,6 +37,8 @@
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-vitest": "^9.1.9",
     "@storybook/nextjs-vite": "^9.1.9",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-content-loader": "^3.1.4",
@@ -54,6 +57,8 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-storybook": "^9.1.9",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "playwright": "^1.55.1",
     "prettier": "^3.6.2",
     "storybook": "^9.1.9",
