--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,24 @@
 {
-  "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
-  "editor.codeActionsOnSave": [
-    "source.fixAll.eslint"
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact"
   ],
-  "editor.formatOnSave": false,
-  "eslint.useFlatConfig": false
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "always"
+  },
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true,
+  "eslint.useFlatConfig": false,
+  "eslint.workingDirectories": [
+    {
+      "directory": "./src",
+      "changeProcessCWD": true
+    },
+    {
+      "directory": "./storybook",
+      "changeProcessCWD": true
+    }
+  ]
 }
