--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "nextjs-gihyo-book",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint --cache --cache-location .eslintcache --ext .js,.jsx,.ts,.tsx .",
+    "lint": "eslint --cache --cache-location .eslintcache --ext .js,.jsx,.ts,.tsx src .storybook",
     "lint:fix": "npm run lint -- --fix",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
